removing hw-h6 from table-cell headers, moving table-description out to avoid horizontal scrolling in small devices, minor css change in links in table

--- a/src/shared/components/table/table.css
+++ b/src/shared/components/table/table.css
@@ -63,13 +63,16 @@
     padding-right: var(--hw-spacing-tiny);
   } 
 
+  & td a {
+    text-decoration-line: underline;
+    font-size: var(--hw-font-size-smaller);
+    font-family: var(--hw-font-primary-regular);
+  }
   & td a:hover {
     font-weight: bold;
     color: var(--hw-color-primary-dark);
-    text-decoration-line: underline;
   }
 
-  & td a,
   & td p {
     font-size: var(--hw-font-size-smaller);
     font-family: var(--hw-font-primary-regular);
