--- a/src/shared/components/wysiwyg/wysiwyg.css
+++ b/src/shared/components/wysiwyg/wysiwyg.css
@@ -79,6 +79,10 @@
     & p, h1, h2, h3, h4, h5, h6{
       margin-bottom: 0;
     }
+    & a {
+      border-bottom: none;
+      color: unset;
+    }
   }
 
   /**
